infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: guerrerocristian/auth
---
apiVersion: v1 
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  selector:
    app: auth
  type: ClusterIP
  ports: 
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000

#create secret object
# kubectl create secret generic jwt-secret --from-literal=JWT_KEY=privatekey
