infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis:6.0-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-clusterip-srv
spec:
  selector:
    app: expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: expiration-redis-nodeport-srv
#spec:
#  type: NodePort
#  selector:
#    app: expiration-redis
#  ports:
#    - name: expiration-redis
#      protocol: TCP
#      port: 27017 # exposed port
#      targetPort: 27017 # internal app port
