infra/k8s/external-name-services.yaml
kind: Service
apiVersion: v1
metadata:
 name: ingress-nginx
spec:
 type: ExternalName
 externalName: ingress-nginx-controller.ingress-nginx.svc.cluster.local
 # formato = service_name.namespace.svc.cluester.local
