infra/k8s/mongo-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-nodeport-srv
spec:
  type: NodePort
  selector:
    app: tickets-mongo
  ports:
    - name: tickets-mongo
      protocol: TCP
      port: 27017 # exposed port 
      targetPort: 27017 # internal app port
      nodePort: 30001
