infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: guerrerocristian/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-clusterip-srv
spec:
  selector:
    app: orders
  type: ClusterIP
  ports:
    - name: orders
      protocol: TCP
      port: 3002
      targetPort: 3000
#create secret object
# kubectl create secret generic jwt-secret --from-literal=JWT_KEY=privatekey
