infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tickets-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo:4.0.20-xenial
---
apiVersion: v1 
kind: Service
metadata:
  name: tickets-mongo-clusterip-srv
spec:
  selector:
    app: tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: tickets-mongo-nodeport-srv
#spec:
#  type: NodePort
#  selector:
#    app: tickets-mongo
#  ports:
#    - name: tickets-mongo
#      protocol: TCP
#      port: 27017 # exposed port 
#      targetPort: 27017 # internal app port
